--- a/index.html
+++ b/index.html
@@ -73,13 +73,20 @@
         
         <!-- Grid 1 - Available immediately -->
         <div class="grid" id="grid1">
+            <div class="empty-box"></div>
             <div class="category">90's</div>
             <div class="category">Rock</div>
             <div class="category">Green Day</div>
 
+            <div class="category">Pop</div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Basket Case</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Smells Like Teen Spirit</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Wonderwall</div></div>
+
+            <div class="category">Hip-Hop</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Lose Yourself</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">My Name Is</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Hotel California</div></div>
         </div>
 
         <!-- Timer for Grid 2 -->
@@ -87,13 +94,20 @@
 
         <!-- Grid 2 - Available after 1 hour -->
         <div class="grid" id="grid2">
+            <div class="empty-box"></div>
             <div class="category">80's</div>
             <div class="category">Pop</div>
             <div class="category">Ed Sheeran</div>
 
+            <div class="category">Rock</div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Billie Jean</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Like a Virgin</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bad Habits</div></div>
+
+            <div class="category">Rap</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Lose Yourself</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Empire State of Mind</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">You Need Me, I Don't Need You</div></div>
         </div>
 
         <!-- Timer for Grid 3 -->
@@ -101,13 +115,20 @@
 
         <!-- Grid 3 - Available after 2 hours -->
         <div class="grid" id="grid3">
+            <div class="empty-box"></div>
             <div class="category">Hip-Hop</div>
             <div class="category">90's</div>
             <div class="category">Classic</div>
 
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Lose Yourself</div></div>
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">My Name Is</div></div>
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Hotel California</div></div>
+            <div class="category">Rock</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bohemian Rhapsody</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Imagine</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Stayin' Alive</div></div>
+
+            <div class="category">Pop</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Billie Jean</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Like a Virgin</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bad Habits</div></div>
         </div>
 
         <!-- Timer for Grid 4 -->
@@ -115,10 +136,17 @@
 
         <!-- Grid 4 - Available after 3 hours -->
         <div class="grid" id="grid4">
+            <div class="empty-box"></div>
             <div class="category">Rock</div>
             <div class="category">70's</div>
             <div class="category">Pop</div>
 
+            <div class="category">Rap</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Stan</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Without Me</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Lose Yourself</div></div>
+
+            <div class="category">Classic</div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bohemian Rhapsody</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Imagine</div></div>
             <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Stayin' Alive</div></div>
@@ -129,13 +157,20 @@
 
         <!-- Grid 5 - Available after 4 hours -->
         <div class="grid" id="grid5">
+            <div class="empty-box"></div>
             <div class="category">2000s</div>
             <div class="category">Rap</div>
             <div class="category">80's</div>
 
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Stan</div></div>
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Without Me</div></div>
-            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Another One Bites the Dust</div></div>
+            <div class="category">90's</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Basket Case</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Smells Like Teen Spirit</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Wonderwall</div></div>
+
+            <div class="category">Classic</div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Bohemian Rhapsody</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Imagine</div></div>
+            <div class="cell"><input type="text" placeholder="Enter Answer"><div class="answer">Stayin' Alive</div></div>
         </div>
     </div>
     <script src="script.js"></script>
