--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             background-color: #fff;
             color: #333;
             border-radius: 5px;
+            visibility: hidden;
         }
         .category {
             font-weight: bold;
@@ -73,7 +74,7 @@
         
         <!-- Grid 1 - Available immediately -->
         <div class="grid" id="grid1">
-            <div class="empty-box"></div>
+            <div class="empty-box"> </div>
             <div class="category">90's</div>
             <div class="category">Rock</div>
             <div class="category">Green Day</div>
@@ -93,8 +94,8 @@
         <div id="timer2"></div>
 
         <!-- Grid 2 - Available after 1 hour -->
-        <div class="grid" id="grid2">
-            <div class="empty-box"></div>
+        <div class="grid" id="grid2" style="visibility: hidden;">
+            <div class="empty-box"> </div>
             <div class="category">80's</div>
             <div class="category">Pop</div>
             <div class="category">Ed Sheeran</div>
@@ -114,8 +115,8 @@
         <div id="timer3"></div>
 
         <!-- Grid 3 - Available after 2 hours -->
-        <div class="grid" id="grid3">
-            <div class="empty-box"></div>
+        <div class="grid" id="grid3" style="visibility: hidden;">
+            <div class="empty-box"> </div>
             <div class="category">Hip-Hop</div>
             <div class="category">90's</div>
             <div class="category">Classic</div>
@@ -135,8 +136,8 @@
         <div id="timer4"></div>
 
         <!-- Grid 4 - Available after 3 hours -->
-        <div class="grid" id="grid4">
-            <div class="empty-box"></div>
+        <div class="grid" id="grid4" style="visibility: hidden;">
+            <div class="empty-box"> </div>
             <div class="category">Rock</div>
             <div class="category">70's</div>
             <div class="category">Pop</div>
@@ -156,8 +157,8 @@
         <div id="timer5"></div>
 
         <!-- Grid 5 - Available after 4 hours -->
-        <div class="grid" id="grid5">
-            <div class="empty-box"></div>
+        <div class="grid" id="grid5" style="visibility: hidden;">
+            <div class="empty-box"> </div>
             <div class="category">2000s</div>
             <div class="category">Rap</div>
             <div class="category">80's</div>
