--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         .container {
             display: grid;
-            grid-template-columns: auto repeat(4, 1fr);
+            grid-template-columns: auto repeat(3, 1fr);
             grid-gap: 10px;
             max-width: 800px;
             width: 100%;
@@ -34,7 +34,7 @@
             background-color: #fff;
             color: #333;
             border-radius: 5px;
-            grid-column: span 1;
+            grid-column: 1 / span 1;
             grid-row: span 1;
         }
         .category {
@@ -82,30 +82,6 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="empty-box"></div>
-        <div class="category">Top Category 1</div>
-        <div class="category">Top Category 2</div>
-        <div class="category">Top Category 3</div>
-
-        <div class="category">Side Category 2</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-
-        <div class="category">Side Category 3</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-
-        <div class="category">Side Category 4</div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-        <div class="cell"><input type="text" placeholder="Enter Answer"></div>
-    </div>
-    <button id="checkButton">Check Answers</button>
-</body>
-</html>
     <div class="container">
         <!-- Timer for Grid 1 -->
         <div id="timer1"></div>
